# honolulu_engine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  setup-env.sh  setup-shaders.sh  setup-submodules.sh
.github/actions/: action.yml
.github/workflows/: setup_vulkan.yml
cmake_utils/: include.cmake
examples/cloth_compute/: CMakeLists.txt  cloth_compute.cpp  cloth_simulation.cpp
examples/dancing_particles/: CMakeLists.txt  main.cpp
examples/fdtd_compute/: CMakeLists.txt  breth_input.ino  fdtd_compute.cpp  serial.hpp  serial_test.cpp
examples/fdtd_compute/fdtd_1d/: common.h  fdtd_1d.cpp  obj_converter.hpp
examples/fdtd_compute/fdtd_1d/shaders/: fdtd_1d.comp  fdtd_1d.frag  fdtd_1d.vert
examples/fdtd_compute/fdtd_2d/: fdtd2_compute_shader.cpp  fdtd2_field.cpp  fdtd2_shading_system.cpp  fdtd_2d.cpp
examples/fdtd_compute/fdtd_2d/common/: fdtd_struct.h
examples/fdtd_compute/fdtd_2d/include/: fdtd2_compute_shader.hpp  fdtd2_field.hpp  fdtd2_shading_system.hpp
examples/fdtd_compute/fdtd_2d/shaders/: fdtd2_compute_active_grids.comp  fdtd2_compute_vtl.comp  fdtd2_field.frag  fdtd_field_texture.frag
examples/fdtd_compute/fdtd_3d/: fdtd3d_field.cpp
examples/fdtd_compute/fdtd_3d/include/: fdtd3_field.hpp
examples/fdtd_compute/fdtd_cylindrical/: fdtd_cylindrical.cpp  fdtd_cylindrical_compute_shader.cpp  fdtd_cylindrical_field.cpp  fdtd_cylindrical_shading_system.cpp
examples/fdtd_compute/fdtd_cylindrical/common/: fdtd2_cylindrical.h  fdtd_cylindrical.h
examples/fdtd_compute/fdtd_cylindrical/include/: fdtd_cylindrical_compute_shader.hpp  fdtd_cylindrical_field.hpp  fdtd_cylindrical_shading_system.hpp  sine_oscillator.hpp
examples/fdtd_compute/fdtd_cylindrical/shaders/: fdtd2_compute.comp  fdtd2_compute_active_grids.comp  fdtd2_compute_texture.comp  fdtd_cylindrical.frag  fdtd_cylindrical_compute.comp
examples/fdtd_compute/test/: CMakeLists.txt  fdtd3d_field_test.cpp
examples/fdtd_wg/: CMakeLists.txt  common.h  excitation.hpp  fdtd.hpp  fdtd1d.cpp  fdtd2d.cpp  fdtd_horn.cpp  fdtd_horn.hpp  main.cpp
examples/fdtd_wg/shaders/: fdtd12.frag  fdtd2d.frag  fdtd_wg.frag
examples/fdtd_wg/shaders/spv/: fdtd12.frag
examples/fdtd_wg/test/: CMakeLists.txt  fdtd_horn_test.cpp
examples/heterogeneous_horn/: CMakeLists.txt  common.h  fdtd12.cpp  fdtd12_horn.cpp  fdtd12_horn.hpp
examples/heterogeneous_horn/shaders/: fdtd12.frag
examples/heterogeneous_horn/test/: CMakeLists.txt  fdtd12_horn_test.cpp
examples/horn_sound/: CMakeLists.txt  common.h  main.cpp  wav_loader.cpp
examples/horn_sound/shaders/: horn.frag  horn.vert
examples/mesh_shader/: CMakeLists.txt  mesh_shader.cpp
examples/ray_tracing/: CMakeLists.txt  compile_ray_tracing_shaders.sh
examples/ray_tracing/acoustic_ray_tracing/: CMakeLists.txt  impulse_response.hpp  main.cpp
examples/ray_tracing/acoustic_ray_tracing/shaders/: shadow.rchit  sound.rchit  sound.rgen  sound.rmiss
examples/ray_tracing/model/: CMakeLists.txt  main.cpp
examples/ray_tracing/model/shaders/: model.rchit  model.rgen  model.rmiss  shadow.rchit  shadow.rmiss  simple_triangle.rchit  simple_triangle.rmiss
examples/ray_tracing/scene_objects/: CMakeLists.txt  impulse_response.hpp  main.cpp
examples/ray_tracing/scene_objects/shaders/: model.rchit  model.rgen  scene.rchit  scene.rgen  scene.rmiss  shadow.rchit  shadow.rmiss  sound.rchit  sound.rgen
examples/ray_tracing/simple_triangle/: CMakeLists.txt  main.cpp
examples/ray_tracing/simple_triangle/shaders/: simple_triangle.rchit  simple_triangle.rgen
include/audio/: audio_data.hpp  convolver.hpp  engine.hpp  utils.hpp
include/game/: actor.hpp  component.hpp  compute_shader.hpp  concepts.hpp  engine.hpp  ray_tracing_system.hpp  renderable_component.hpp  shading_system.hpp  (+2 more)
modules/audio/: CMakeLists.txt  convolver.cpp  engine.cpp  sample.cpp  utils.cpp
modules/geometry/: CMakeLists.txt  bounding_volume.cpp  he_mesh.cpp  intersection.cpp  mesh_model.cpp  mesh_separation.cpp  primitives.cpp
modules/graphics/: CMakeLists.txt  acceleration_structure.cpp  buffer.cpp  compute_pipeline.cpp  desc_set.cpp  device.cpp  image_resource.cpp  pipeline.cpp  renderer.cpp  shader_binding_table.cpp  static_mesh.cpp  swap_chain.cpp  texture_image.cpp  timeline_semaphore.cpp  utils.cpp  window.cpp
modules/graphics/graphics_models/: static_mesh.cpp  static_meshlet.cpp
modules/graphics/shaders/: global_ubo.h
modules/graphics/shaders/mesh_shader/: frame_anim_meshlet.mesh.glsl  frame_anim_meshlet.task.glsl  meshlet_constants.h  simple_meshlet.frag.glsl  simple_meshlet.mesh.glsl  simple_meshlet.task.glsl
modules/graphics/shaders/vertex_shader/: direct_frag.frag  frame_anim_mesh.vert  grid_shader.frag  grid_shader.vert  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert  skinning_mesh.vert  textured.frag  textured.vert  wire_frustum_shader.frag  wire_frustum_shader.vert
modules/graphics/src/: camera.cpp  engine.cpp  renderer.cpp
modules/graphics/src/systems/: mesh_rendering_system.cpp  point_light.cpp
modules/physics/: CMakeLists.txt  collision_detector.cpp  fdtd2_field.cpp  mass_spring_cloth.cpp  resource_manager.cpp
modules/physics/common/: cloth_config.h  cloth_push.h  fdtd2_config.h  fdtd_struct.h
modules/physics/compute_shader/: cloth_compute_shader.cpp  fdtd2_compute_shader.cpp
modules/physics/shaders/compute_shader/: cloth_compute.comp  fdtd2.comp  fdtd2_compute.comp  fdtd2_compute_active_grids.comp  fdtd2_compute_texture.comp  fdtd2_compute_vtl.comp  fdtd2_pressure_update.comp  fdtd2_velocity_update.comp
modules/physics/shaders/vertex_shader/: cloth_compute.vert  fdtd2_field.frag  fdtd_field_texture.frag
modules/physics/shading_system/: cloth_compute.cpp  cloth_compute_shading_system.cpp  fdtd2_shading_system.cpp
modules/physics/src/: particle_component.cpp
test/: CMakeLists.txt
test/audio/: fft_test.cpp
test/geometry/: half_edge_test.cpp  intersection_test.cpp  primitives_test.cpp
test/graphics/: desc_sets_test.cpp
test/utils/: mt_queue_test.cpp  thread_pool.cpp  thread_pool_test.cpp
tests/: CMakeLists.txt
(+99 files in other folders)
